syntax = "proto3";

package testdata.fieldmask;
option go_package = "github.com/Neakxs/protocel/testdata/validate/fieldmask";

import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

service FieldmaskService {
    rpc Fieldmask(FieldmaskRequest) returns (google.protobuf.Empty) {};
}

message FieldmaskRequest {
    message Data {
        string name = 1 [(protocel.validate.field).expr = 'name.startswith("names/")'];
    }
    Data data = 1 [(protocel.validate.field).expr = 'data.validateWithMask(field_mask)'];
    google.protobuf.FieldMask field_mask = 2;
}